[tool.poetry]
name = "autobackup"
version = "0.1.0"
description = ""
authors = ["Barkosss <andrey.bar66@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^22.2"
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
